# Omnidirectional-Vision-Guided-Autonomous-Robot-with-Object-Recognition-and-Navigation-Using-ROS2

omnisight_repo/: README.md
omnisight_repo/phase1/omnisight_ws/src/omnisight_patrol/: package.xml  setup.py
omnisight_repo/phase1/omnisight_ws/src/omnisight_patrol/launch/: patrol_system.launch.py
omnisight_repo/phase1/omnisight_ws/src/omnisight_patrol/omnisight_patrol/: alert_manager.py  face_recognition_node.py  motion_control.py  pan_tilt_scanner.py  patrol_master.py
omnisight_repo/phase2/omnisight_simulation/src/omnisight_sim/: CMakeLists.txt
omnisight_repo/phase2/omnisight_simulation/src/omnisight_sim/config/: ros_gz_bridge.yaml
omnisight_repo/phase2/omnisight_simulation/src/omnisight_sim/launch/: display.launch.py  simulation.launch.py
omnisight_repo/ros2_ws/: README.md
omnisight_repo/ros2_ws/src/mec_omnisight/mec_omnisight/: package.xml
omnisight_repo/ros2_ws/src/mec_omnisight/mec_omnisight_description/: CMakeLists.txt  package.xml
phase1/: README.md
phase1/omnisight_ws/src/omnisight_patrol/: QUICKSTART.txt
phase1/omnisight_ws/src/omnisight_patrol/config/: omnisight_room.xml  patrol_waypoints.yaml
phase1/omnisight_ws/src/omnisight_patrol/monitoring_client/: pc_receiver.py
phase1/omnisight_ws/src/omnisight_patrol/omnisight_patrol/: __init__.py  obstacle_avoidance.py  scene_monitor.py
phase1/omnisight_ws/src/omnisight_patrol/resource/: omnisight_patrol
phase2/: README.md
phase2/omnisight_simulation/src/omnisight_sim/: package.xml
phase2/omnisight_simulation/src/omnisight_sim/worlds/: omnisight_indoor.world
(+7 files in other folders)
