<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnisight_sim</name>
  <version>1.0.0</version>
  <description>
    Omnisight Gazebo Simulation Package — ROS2 Humble
    Provides Gazebo Ignition (Fortress) simulation for the Omnisight
    mecanum-wheel autonomous robot with LiDAR, RGBD camera, and IMU.
    VIT Bhopal SEEE Capstone 2022-2026
  </description>
  <maintainer email="jphepat03@gmail.com">Jay Hepat</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mec_omnisight_description</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
